# bfgminer

./: Makefile.am  configure.ac  miner.c  miner.h  sha256_cryptopp.c  sha256_generic.c  util.h
malgo/: keccak.c  mining_algorithm.h  scrypt.c  sha256d.c
tests/: Makefile.am  test_scrypt.c
